# CC-TaglessFinal

./: .gitignore  Arithmetic.hs  Bindings.hs  CC-TTF.cabal  LICENSE  LambdaCalculus.hs  Variational.hs
Data/: Variational.hs
Examples/: Arithmetic.hs  DivZero.hs  LambdaCalculus.hs  MathExpressions.hs  PropCheck.hs
Examples/Arithmetic/: Division.hs  Language.hs  Properties.hs
Examples/LambdaCalculus/: Language.hs  Properties.hs
src/Language/TTF/: Arithmetic.hs  Lambda.hs  Literal.hs  Pretty.hs
src/Language/TTF/CC/: Choice.hs  Pretty.hs  Share.hs
test/: TestMain.hs
test/Language/TTF/: LambdaTest.hs
