name:          CC-TTF
version:       0.0.0
synopsis:      A typed-tagless-final implementation of the choice calculus.
homepage:      https://github.com/walkie/CC-TTF
bug-reports:   https://github.com/walkie/CC-TTF/issues
license:       BSD3
license-file:  LICENSE
author:        Eric Walkingshaw
maintainer:    eric@walkingshaw.net
category:      Language
build-type:    Simple
cabal-version: >=1.10

source-repository head
  type:     git
  location: https://github.com/walkie/CC-TTF.git
  branch:   master

library
  default-language: Haskell2010
  hs-source-dirs:   src
  
  build-depends:
    base >= 4.6,
    containers >= 0.5,
    ansi-terminal >= 0.6
  
  exposed-modules:  
    -- Language.TTF.Arithmetic,
    Language.TTF.Lambda,
    Language.TTF.Literal,
    Language.TTF.Pretty
    -- Language.TTF.CC.Choice,
    -- Language.TTF.CC.Pretty,
    -- Language.TTF.CC.Share

test-suite tests
  default-language: Haskell2010
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  main-is:          TestMain.hs
  
  build-depends:
    base >= 4.6,
    HUnit >= 1.2.5.2,
    test-framework >= 0.8,
    test-framework-hunit >= 0.3.0,
    test-framework-quickcheck2 >= 0.3.0.1,
    test-framework-th >= 0.2.4
    
